Avance de MantenimientoUsuario

--- a/ProyectoTLS/src/inf/pucp/edu/pe/vista/principal/MenuPrincipal.form
+++ b/ProyectoTLS/src/inf/pucp/edu/pe/vista/principal/MenuPrincipal.form
@@ -9,10 +9,13 @@
             <Property name="text" type="java.lang.String" value="Sistema"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="mnuCerrarSesion">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cerrar sesion"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuCerrarSesionActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
