--- a/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion.form
+++ b/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion.form
@@ -33,9 +33,6 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
-  <Events>
-    <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
-  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -51,28 +48,20 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <Component id="barraMenu" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="917" max="32767" attributes="0"/>
-          </Group>
+          <Component id="barraMenu" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="barraMenu" min="-2" pref="27" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="455" max="32767" attributes="0"/>
+              <Component id="barraMenu" min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="527" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JPanel" name="barraMenu">
-      <Properties>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new Dimension(1024, 38)&#xd;&#xa;" type="code"/>
-        </Property>
-      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -86,21 +75,21 @@
                   <Component id="btnPause" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnReanudar" min="-2" pref="26" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                   <Component id="lblCantidadSemaforos" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
                   <Component id="lblCantidadVehiculos" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
-                  <Component id="lblVelocidad" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
                   <Component id="lblEscala" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnReducirZoom" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnAumentarZoom" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="btnAumentarZoom" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="btnNewWindows" min="-2" pref="40" max="-2" attributes="0"/>
+                  <EmptySpace pref="111" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -111,24 +100,21 @@
                       <Component id="btnPause" min="-2" pref="27" max="-2" attributes="0"/>
                       <Component id="btnPlay" min="-2" pref="27" max="-2" attributes="0"/>
                       <Component id="btnStop" min="-2" pref="27" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btnReducirZoom" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnAumentarZoom" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblCantidadSemaforos" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblCantidadVehiculos" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblEscala" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace min="12" max="32767" attributes="0"/>
               </Group>
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnReanudar" alignment="1" pref="0" max="32767" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="btnReducirZoom" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="btnAumentarZoom" alignment="3" max="-2" attributes="0"/>
-                              <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblCantidadSemaforos" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblCantidadVehiculos" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblVelocidad" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblEscala" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="btnReanudar" pref="0" max="32767" attributes="0"/>
+                      <Component id="btnNewWindows" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -208,7 +194,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lblCantidadSemaforos">
           <Properties>
-            <Property name="text" type="java.lang.String" value="#Semaforos: "/>
+            <Property name="text" type="java.lang.String" value="#Semaforos : "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -216,15 +202,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lblCantidadVehiculos">
           <Properties>
-            <Property name="text" type="java.lang.String" value=" #Vehiculos"/>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
-          </AuxValues>
-        </Component>
-        <Component class="javax.swing.JLabel" name="lblVelocidad">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="V.Promedio: "/>
+            <Property name="text" type="java.lang.String" value="#Vehiculos :"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -237,6 +215,16 @@
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnNewWindows">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/inf/pucp/edu/pe/Iconos/New Window.png"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNewWindowsActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
